--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -177,8 +177,11 @@
       margin-right: 20px;
     }
     .topList {
+      display: block;
       display: flex;
+
       .topListItems {
+        display:none;
         color: rgb(14, 13, 13);
         list-style: none;
         margin-right: 20px;
