--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -5,14 +5,25 @@
   margin-top: 0.25rem;
 }
 
+.RegisterLarge{
+  display: flex;
+  justify-content: center;
+  font-size: 100px;
+  font-weight:500;
+  margin-top: 10px;
+  color: teal;
+
+}
+
 form {
   height: 100vh;
-  padding-top: 50px;
+  padding-top: 20px;
   width: 95%;
   max-width: 500px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  /* background-color: red; */
 }
 
 .registerInputLabel {
@@ -25,12 +36,14 @@ form {
 
 .input-error,
 .registerInputs {
-  border: 2px solid grey;
+  border: 1px solid teal;
   background-color: rgb(230, 229, 229);
   height: 40px;
   border-radius: 10px;
   padding-left: 10px;
   font-size: 17px;
+  outline: none;
+  
 }
 
 .registerInputs::placeholder {
